workload_examples/02_loadbalancing_ingress/ingress-frontend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: name-based-ing
spec:
  rules:
    - http:
        paths:
          - path: /dev
            backend:
              serviceName: web-app-dev
              servicePort: 80
          - path: /qa
            backend:
              serviceName: web-app-qa
              servicePort: 80
